// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<EventListFilters /> renders correctly 1`] = `
<Row
  bsClass="row"
  className="mb-10"
  componentClass="div"
>
  <Col
    bsClass="col"
    className="pl-0"
    componentClass="div"
    md={8}
    xs={12}
  >
    <FiltersContainer
      filterCount={2}
      overlay={
        <div>
          <form>
            <Col
              bsClass="col"
              className="mt-5"
              componentClass="div"
            >
              <div>
                <div
                  className="d-flex justify-content-end"
                >
                  <Button
                    active={false}
                    block={false}
                    bsClass="btn"
                    bsStyle="default"
                    className="btn--outline btn-dark-gray"
                    disabled={false}
                    onClick={[MockFunction]}
                  >
                    <FormattedMessage
                      id="reset-filters"
                      values={Object {}}
                    />
                  </Button>
                </div>
              </div>
            </Col>
            <Col
              bsClass="col"
              className="mt-5"
              componentClass="div"
            >
              <div>
                <Field
                  clearable={true}
                  component={[Function]}
                  id="EventListFilters-filter-theme"
                  name="theme"
                  options={Array []}
                  placeholder="type-theme"
                />
              </div>
            </Col>
            <Col
              bsClass="col"
              className="mt-5"
              componentClass="div"
            >
              <div>
                <Field
                  clearable={true}
                  component={[Function]}
                  id="EventListFilters-filter-project"
                  name="project"
                  options={Array []}
                  placeholder="type-project"
                />
              </div>
            </Col>
            <Col
              bsClass="col"
              className="mt-5"
              componentClass="div"
            >
              <div>
                <Field
                  autoload={true}
                  component={[Function]}
                  id="EventListFilters-filter-userType"
                  name="userType"
                  options={
                    Array [
                      Object {
                        "label": "Citoyen",
                        "value": "userType-1",
                      },
                      Object {
                        "label": "Institution",
                        "value": "userType-2",
                      },
                    ]
                  }
                  placeholder="registration.type"
                />
              </div>
            </Col>
          </form>
        </div>
      }
      type="event"
    />
  </Col>
  <Col
    bsClass="col"
    componentClass="div"
    md={4}
    smHidden={true}
    xsHidden={true}
  >
    <form>
      <Field
        addonAfter={
          <i
            className="cap cap-magnifier"
          />
        }
        component={[Function]}
        divClassName="event-search-group pull-right w-100"
        id="event-search-input"
        name="search"
        placeholder="proposal-search"
        type="text"
      />
    </form>
  </Col>
</Row>
`;

exports[`<EventListFilters /> renders correctly without filters 1`] = `
<Row
  bsClass="row"
  className="mb-10"
  componentClass="div"
>
  <Col
    bsClass="col"
    className="pl-0"
    componentClass="div"
    md={8}
    xs={12}
  >
    <FiltersContainer
      filterCount={2}
      overlay={
        <div>
          <form>
            <Col
              bsClass="col"
              className="mt-5"
              componentClass="div"
            >
              <div>
                <div
                  className="d-flex justify-content-end"
                >
                  <Button
                    active={false}
                    block={false}
                    bsClass="btn"
                    bsStyle="default"
                    className="btn--outline btn-dark-gray"
                    disabled={false}
                    onClick={[MockFunction]}
                  >
                    <FormattedMessage
                      id="reset-filters"
                      values={Object {}}
                    />
                  </Button>
                </div>
              </div>
            </Col>
            <Col
              bsClass="col"
              className="mt-5"
              componentClass="div"
            >
              <div>
                <Field
                  autoload={true}
                  component={[Function]}
                  id="EventListFilters-filter-userType"
                  name="userType"
                  options={
                    Array [
                      Object {
                        "label": "Citoyen",
                        "value": "userType-1",
                      },
                      Object {
                        "label": "Institution",
                        "value": "userType-2",
                      },
                    ]
                  }
                  placeholder="registration.type"
                />
              </div>
            </Col>
          </form>
        </div>
      }
      type="event"
    />
  </Col>
  <Col
    bsClass="col"
    componentClass="div"
    md={4}
    smHidden={true}
    xsHidden={true}
  >
    <form>
      <Field
        addonAfter={
          <i
            className="cap cap-magnifier"
          />
        }
        component={[Function]}
        divClassName="event-search-group pull-right w-100"
        id="event-search-input"
        name="search"
        placeholder="proposal-search"
        type="text"
      />
    </form>
  </Col>
</Row>
`;
